1. 제철 회 안내 기능 구현  - 메인 화면에 제철 회가 뜨고, 누르면 상세정보 확인 가능
2. 회 검색 기능 구현
 - 검색 버튼 누를 시 해당 회의 상세정보 확인 가능
 - 검색 결과가 없을 시 이전 검색 결과가 뜨고 있는데.. 결과가 없을 시 토스트를 띄우든 수정 해야 할 듯

3. 상세 정보에 설명만 띄우게 되어 있음
 - Efficacy(효능) Cooking(요리) HowToEat(먹는방법) 추가 要

고민: 딥러닝 수행 시 탐색 결과의 종류가 여러개 나오면 그 개수만큼 두번째 창을 띄울까 ?

--- a/android UI/app/src/main/res/layout/activity_main.xml
+++ b/android UI/app/src/main/res/layout/activity_main.xml
@@ -33,38 +33,50 @@
             android:src="@drawable/camera" />
     </RelativeLayout>
 
-    <android.widget.Button
-        android:id="@+id/rec_btn"
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="152dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/rawfish1"
-        android:gravity="bottom|right"
-        android:shadowColor="@color/white"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="2"
-        android:text="시즌 레시피"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_gravity="center"/>
+        android:layout_height="152dp">
+        <ImageView
+            android:id="@+id/rec_btn"
+            android:layout_width="match_parent"
+            android:layout_height="152dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:src="@drawable/rawfish1"
+            android:scaleType="fitXY"
+            android:shadowColor="@color/white"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="16dp"
+            android:text="제철 회"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold">
+
+        </TextView>
+    </FrameLayout>
+
 
     <SearchView
         android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="41dp"
+        android:layout_gravity="center"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="20dp"
-        android:layoutDirection="rtl"
-        android:iconifiedByDefault="true"
+        android:layout_marginRight="16dp"
         android:background="@drawable/radius"
-        android:queryHint="회를 입력하세요"
-        android:layout_gravity="center">
-    </SearchView>
+        android:iconifiedByDefault="true"
+        android:layoutDirection="rtl"
+        android:queryHint="회를 입력하세요"></SearchView>
 
     <LinearLayout
         android:layout_width="wrap_content"
