검색창 미등록 회 처리, 세부정보 추가

--- a/android UI/app/src/main/res/layout/activity_main.xml
+++ b/android UI/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:src="@drawable/rawfish1"
+            android:background="#aaa"
             android:scaleType="fitXY"
             android:shadowColor="@color/white"
             android:shadowDx="1"
