--- a/android UI/app/src/main/res/layout/activity_main2.xml
+++ b/android UI/app/src/main/res/layout/activity_main2.xml
@@ -55,11 +55,11 @@
             android:id="@+id/month"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/image"
+            android:layout_below="@id/image2"
             android:layout_centerInParent="true"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="15dp"
-            android:text="1~3월"
+            android:text=""
             android:textSize="20dp" />
 
         <TextView
@@ -71,8 +71,9 @@
             android:paddingRight="50dp"
             android:layout_marginBottom="5dp"
             android:scrollbars="vertical"
-            android:text="가\n나\n다\n라\n마\n바\n사\n아\n자\n차\n카\n타\n파\n하\n\n\n123\n456\n\n789"
-            android:textSize="15dp" />
+            android:text=""
+            android:textSize="18dp"
+            android:lineSpacingExtra="2dp"/>
 
     </RelativeLayout>
 
