--- a/android UI/app/src/main/res/layout/activity_main.xml
+++ b/android UI/app/src/main/res/layout/activity_main.xml
@@ -1,128 +1,43 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+<?xml version="1.0" encoding="UTF-8"?>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:text="사랑회요"
-            android:textColor="@color/black"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
-
-        <ImageButton
-            android:id="@+id/camera_btn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="16dp"
-            android:layout_alignParentRight="true"
-            android:background="@android:color/transparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/camera" />
-    </RelativeLayout>
+    <LinearLayout android:orientation="vertical" android:layout_height="fill_parent" android:layout_width="fill_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="152dp">
-        <ImageView
-            android:id="@+id/rec_btn"
-            android:layout_width="match_parent"
-            android:layout_height="152dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="#aaa"
-            android:scaleType="fitXY"
-            android:shadowColor="@color/white"
-            android:shadowDx="1"
-            android:shadowDy="1"
-            android:shadowRadius="2"/>
+    -<RelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:layout_marginRight="16dp"
-            android:text="제철 회"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            android:textStyle="bold">
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:typeface="monospace" android:textStyle="bold" android:textSize="30dp" android:textColor="@color/black" android:text="사랑회요" android:layout_marginTop="8dp" android:layout_marginStart="16dp"/>
 
-        </TextView>
-    </FrameLayout>
+    <ImageButton android:layout_height="40dp" android:layout_width="40dp" android:layout_marginTop="8dp" android:src="@drawable/camera" android:scaleType="fitCenter" android:background="@android:color/transparent" android:layout_alignParentRight="true" android:layout_marginRight="16dp" android:id="@+id/camera_btn"/>
+
+</RelativeLayout>
 
 
-    <SearchView
-        android:id="@+id/search"
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/radius"
-        android:iconifiedByDefault="true"
-        android:layoutDirection="rtl"
-        android:queryHint="회를 입력하세요"></SearchView>
+    -<FrameLayout android:layout_height="152dp" android:layout_width="match_parent">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="16dp">
-        <android.widget.Button
-            android:id="@+id/diary_btn1"
-            android:layout_width="190dp"
-            android:layout_height="190dp"
-            android:gravity="bottom|right"
-            android:text="9.31"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
-        <android.widget.Button
-            android:id="@+id/diary_btn2"
-            android:layout_width="190dp"
-            android:layout_height="190dp"
-            android:gravity="bottom|right"
-            android:text="10.21"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
-    </LinearLayout>
+    <ImageView android:layout_height="152dp" android:layout_width="match_parent" android:layout_marginTop="8dp" android:src="@drawable/rawfish1" android:scaleType="fitXY" android:layout_marginRight="16dp" android:id="@+id/rec_btn" android:shadowRadius="2" android:shadowDy="1" android:shadowDx="1" android:shadowColor="@color/white" android:layout_marginLeft="16dp"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal">
-        <android.widget.Button
-            android:id="@+id/diary_btn3"
-            android:layout_width="190dp"
-            android:layout_height="190dp"
-            android:gravity="bottom|right"
-            android:text="test"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
-        <android.widget.Button
-            android:id="@+id/diary_btn4"
-            android:layout_width="190dp"
-            android:layout_height="190dp"
-            android:gravity="bottom|right"
-            android:text="test"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
-    </LinearLayout>
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textStyle="bold" android:textSize="20dp" android:textColor="@color/black" android:text="제철 회" android:layout_marginRight="16dp" android:layout_gravity="bottom|right"> </TextView>
+
+</FrameLayout>
+
+    <SearchView android:layout_height="41dp" android:layout_width="match_parent" android:layout_marginTop="20dp" android:background="@drawable/radius" android:layout_marginRight="16dp" android:id="@+id/search" android:layout_marginLeft="16dp" android:layout_gravity="center" android:queryHint="회를 입력하세요" android:layoutDirection="rtl" android:iconifiedByDefault="true"/>
+
+
+    -<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center_horizontal" android:layout_margin="16dp">
+
+    <android.widget.Button android:layout_height="190dp" android:layout_width="190dp" android:textStyle="bold" android:textSize="20dp" android:text="9.31" android:id="@+id/diary_btn1" android:gravity="bottom|right"/>
+
+    <android.widget.Button android:layout_height="190dp" android:layout_width="190dp" android:textStyle="bold" android:textSize="20dp" android:text="10.21" android:id="@+id/diary_btn2" android:gravity="bottom|right"/>
+
+</LinearLayout>
+
+
+    -<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center_horizontal">
+
+    <android.widget.Button android:layout_height="190dp" android:layout_width="190dp" android:textStyle="bold" android:textSize="20dp" android:text="test" android:id="@+id/diary_btn3" android:gravity="bottom|right"/>
+
+    <android.widget.Button android:layout_height="190dp" android:layout_width="190dp" android:textStyle="bold" android:textSize="20dp" android:text="test" android:id="@+id/diary_btn4" android:gravity="bottom|right"/>
+
+</LinearLayout>
 
 </LinearLayout>
