--- a/android UI/app/src/main/res/layout/activity_main2.xml
+++ b/android UI/app/src/main/res/layout/activity_main2.xml
@@ -1,80 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity2">
+<?xml version="1.0" encoding="UTF-8"?>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:background="@drawable/rawfish2" />
+    <FrameLayout tools:context=".MainActivity2" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="사랑회요"
-        android:textColor="@color/white"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:typeface="monospace"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView android:layout_height="300dp" android:layout_width="match_parent" android:background="@drawable/rawfish2"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="550dp"
-        android:layout_gravity="bottom"
-        android:background="@color/white">
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toTopOf="parent" app:layout_constraintLeft_toLeftOf="parent" android:typeface="monospace" android:textStyle="bold" android:textSize="30dp" android:textColor="@color/white" android:text="사랑회요" android:layout_marginTop="8dp" android:layout_marginStart="16dp"/>
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:text="광어"
-            android:textSize="20dp" />
 
-        <ImageView
-            android:id="@+id/image2"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_below="@id/name"
-            android:paddingLeft="50dp"
-            android:paddingRight="50dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/rawfish2" />
+    -<RelativeLayout android:layout_height="550dp" android:layout_width="match_parent" android:background="@color/white" android:layout_gravity="bottom">
 
-        <TextView
-            android:id="@+id/month"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/image2"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="15dp"
-            android:text=""
-            android:textSize="20dp" />
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="20dp" android:text="광어" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:layout_centerInParent="true" android:layout_alignParentTop="true" android:id="@+id/name"/>
 
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/month"
-            android:paddingLeft="50dp"
-            android:paddingRight="50dp"
-            android:layout_marginBottom="5dp"
-            android:scrollbars="vertical"
-            android:text=""
-            android:textSize="18dp"
-            android:lineSpacingExtra="2dp"/>
+    <ImageView android:layout_height="180dp" android:layout_width="match_parent" android:id="@+id/image2" android:src="@drawable/rawfish2" android:scaleType="centerCrop" android:paddingRight="50dp" android:paddingLeft="50dp" android:layout_below="@id/name"/>
 
-    </RelativeLayout>
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="20dp" android:text="" android:layout_marginTop="10dp" android:layout_marginBottom="15dp" android:layout_centerInParent="true" android:id="@+id/month" android:layout_below="@id/image2"/>
+
+    <TextView android:layout_height="match_parent" android:layout_width="match_parent" android:textSize="18dp" android:text="" android:layout_marginBottom="5dp" android:id="@+id/description" android:paddingRight="50dp" android:paddingLeft="50dp" android:layout_below="@id/month" android:lineSpacingExtra="2dp" android:scrollbars="vertical"/>
+
+</RelativeLayout>
 
 </FrameLayout>
