--- a/android UI/app/src/main/res/xml/file_paths.xml
+++ b/android UI/app/src/main/res/xml/file_paths.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-files-path name="external_files" path="." />
+    <external-files-path name="my_images" path="Pictures" />
     <external-cache-path name="external_cache" path="." />
+
+    <files-path name="my_internal_images" path="image/" />
+    <external-files-path name="my_external_images" path="image/" />
+    <root-path name="root" path="./"/>
 </paths>
