--- a/android UI/app/src/main/res/layout/activity_main2.xml
+++ b/android UI/app/src/main/res/layout/activity_main2.xml
@@ -2,20 +2,91 @@
 
     <FrameLayout tools:context=".MainActivity2" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView android:layout_height="300dp" android:layout_width="match_parent" android:background="@drawable/rawfish2"/>
+    <ImageView
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:src="@drawable/rawfish2"
+        android:tint="#99000000"
+        android:adjustViewBounds="true" />
 
-    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toTopOf="parent" app:layout_constraintLeft_toLeftOf="parent" android:typeface="monospace" android:textStyle="bold" android:textSize="30dp" android:textColor="@color/white" android:text="사랑회요" android:layout_marginTop="8dp" android:layout_marginStart="16dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="18dp"
+        android:fontFamily="@font/bhsans"
+        android:text="사랑회요"
+        android:textColor="#FFFFFF"
+        android:textSize="26dp"
+        android:textStyle="normal"
+        android:typeface="monospace" />
 
 
-    -<RelativeLayout android:layout_height="550dp" android:layout_width="match_parent" android:background="@color/white" android:layout_gravity="bottom">
+    -<RelativeLayout
+    android:layout_height="550dp"
+    android:layout_width="match_parent"
+    android:background="@drawable/main2_radius"
+    android:layout_gravity="bottom">
 
-    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="20dp" android:text="광어" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:layout_centerInParent="true" android:layout_alignParentTop="true" android:id="@+id/name"/>
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="10dp"
+        android:text="광어"
+        android:textStyle="bold"
+        android:textColor="#3D3D3D"
+        android:textSize="20dp" />
 
-    <ImageView android:layout_height="180dp" android:layout_width="match_parent" android:id="@+id/image2" android:src="@drawable/rawfish2" android:scaleType="centerCrop" android:paddingRight="50dp" android:paddingLeft="50dp" android:layout_below="@id/name"/>
+
+<!--    <ImageView-->
+<!--        android:id="@+id/image2"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="180dp"-->
+<!--        android:layout_below="@id/name"-->
+<!--        android:paddingLeft="50dp"-->
+<!--        android:paddingRight="50dp"-->
+<!--        android:scaleType="centerCrop"-->
+<!--        android:src="@drawable/rawfish2"-->
+<!--        />-->
+
+    <androidx.cardview.widget.CardView
+        android:layout_height="190dp"
+        android:layout_width="match_parent"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
+        app:cardCornerRadius="3dp"
+        app:cardElevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/image2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/name"
+            android:scaleType="centerCrop"
+            android:src="@drawable/rawfish2" />
+    </androidx.cardview.widget.CardView>
 
     <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="20dp" android:text="" android:layout_marginTop="10dp" android:layout_marginBottom="15dp" android:layout_centerInParent="true" android:id="@+id/month" android:layout_below="@id/image2"/>
 
-    <TextView android:layout_height="match_parent" android:layout_width="match_parent" android:textSize="18dp" android:text="" android:layout_marginBottom="5dp" android:id="@+id/description" android:paddingRight="50dp" android:paddingLeft="50dp" android:layout_below="@id/month" android:lineSpacingExtra="2dp" android:scrollbars="vertical"/>
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/month"
+        android:layout_marginBottom="5dp"
+        android:lineSpacingExtra="2dp"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        android:scrollbars="vertical"
+        android:text=""
+        android:textSize="18dp" />
 
 </RelativeLayout>
 
