--- a/android UI/app/src/main/res/layout/activity_splash.xml
+++ b/android UI/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#808080"
+    android:background="@drawable/splash_bg"
     tools:context=".SplashActivity">
 
     <TextView
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="40dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
+        android:textColor="#F0F0F0"
+        android:fontFamily="@font/bhsans"
         android:text="사\n랑\n회\n요\n.."
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
