--- a/android UI/app/src/main/res/layout/activity_main2.xml
+++ b/android UI/app/src/main/res/layout/activity_main2.xml
@@ -73,7 +73,16 @@
             android:src="@drawable/rawfish2" />
     </androidx.cardview.widget.CardView>
 
-    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="20dp" android:text="" android:layout_marginTop="10dp" android:layout_marginBottom="15dp" android:layout_centerInParent="true" android:id="@+id/month" android:layout_below="@id/image2"/>
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:textSize="20dp"
+        android:text=""
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="15dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/month"
+        android:layout_below="@id/image2"/>
 
     <TextView
         android:id="@+id/description"
