--- a/android UI/app/src/main/res/layout/activity_cam.xml
+++ b/android UI/app/src/main/res/layout/activity_cam.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/tv_placeholder"
+            android:text="@string/tv_description"
             android:textAlignment="center"
             android:textSize="40sp" />
 
@@ -37,7 +37,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:text="@string/tv_description" />
+        android:text="@string/tv_placeholder" />
 
     <LinearLayout
         android:id="@+id/llSampleImage"
@@ -47,34 +47,6 @@
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imgSampleOne"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:adjustViewBounds="true"
-            android:contentDescription="@null"
-            android:scaleType="centerCrop"
-            android:src="@drawable/img_meal_one" />
-
-        <ImageView
-            android:id="@+id/imgSampleTwo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:adjustViewBounds="true"
-            android:contentDescription="@null"
-            android:scaleType="centerCrop"
-            android:src="@drawable/img_meal_two" />
-
-        <ImageView
-            android:id="@+id/imgSampleThree"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:adjustViewBounds="true"
-            android:contentDescription="@null"
-            android:scaleType="centerCrop"
-            android:src="@drawable/img_meal_three" />
     </LinearLayout>
 
     <Button
