--- a/android UI/app/src/main/res/layout/activity_main2.xml
+++ b/android UI/app/src/main/res/layout/activity_main2.xml
@@ -3,6 +3,7 @@
     <FrameLayout tools:context=".MainActivity2" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
+        android:id="@+id/resultImg"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:src="@drawable/rawfish2"
