--- a/android UI/app/src/main/res/layout/activity_cam.xml
+++ b/android UI/app/src/main/res/layout/activity_cam.xml
@@ -37,7 +37,7 @@
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/llSampleImage"
+        android:layout_above="@id/captureImageFab"
         android:layout_marginStart="16dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
